# multi-agent-math-assistant

./: README.md  main.py  pyproject.toml
app/agents/: expression_interpreter_agent.py  mathematical_agent.py  writer_agent.py
app/clients/: openai_client.py
app/configuration/: config.py
app/language/: language_detector.py
app/memory/: conversation_memory.py
app/orchestrator/: chat_orchestrator.py
app/prompts/: expression_interpreter_prompt.py  writer_prompt.py
app/tools/: math_tools.py  tool_registry.py
