[project]
name = "chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Denilson", email = "denilsonsantos00@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = ["streamlit (>=1.58.0,<2.0.0)", "openai (>=2.41.1,<3.0.0)", "python-dotenv (>=1.2.2,<2.0.0)", "langdetect (>=1.0.9,<2.0.0)", "langchain (>=1.3.9,<2.0.0)", "langchain-openai (>=1.3.2,<2.0.0)", "langchain-community (>=0.4.2,<0.5.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
